# ability_ability_runtime

./: 19059.diff  9720.diff  AGENTS.md  CLAUDE.md  CODEOWNERS  LAST_PR.txt  OAT.xml  README_zh.md  aafwk.gni  ability_runtime.gni  bundle.json  hisysevent.yaml  modular_object_dispatcher_api.md  modular_object_dispatcher_code_review.md  modular_object_dispatcher_diff.md  q  tests  tlb.json
agent_runtime_framework/services/agentmgr/: BUILD.gn
agent_runtime_framework/services/common/: BUILD.gn
cj_environment/: cj_environment.gni
cj_environment/frameworks/cj_environment/: BUILD.gn
cj_environment/interfaces/inner_api/: cj_environment.h  cj_envsetup.h  dynamic_loader.h
cj_environment/test/unittest/: BUILD.gn
cli_tool_framework/interfaces/cli_tool/: BUILD.gn  ICliToolCmd.idl  ICliToolData.idl  ICliToolManager.idl  ICliToolManagerScheduler.idl  IExecToolCallback.idl
cli_tool_framework/services/climgr/: BUILD.gn
cli_tool_framework/services/common/: BUILD.gn
cli_tool_framework/test/unittest/: BUILD.gn
ets_environment/frameworks/ets_environment/: BUILD.gn
frameworks/ani/: BUILD.gn
frameworks/ani/ability_delegator/: BUILD.gn  ability_delegator_config.json
frameworks/ani/app/: @ohos.app.ability.AbilityStage.ets  @ohos.app.ability.Configuration.ets
frameworks/ani/configuration/: BUILD.gn  configuration_config.json
frameworks/ani/launch_param/: launch_param.json
frameworks/ani/ui_extension_ability/: BUILD.gn  extension_ability_config.json  ui_extension_ability_config.json
frameworks/ani/uiextensioncontext/: BUILD.gn  extension_context_config.json
frameworks/c/ability_runtime/: BUILD.gn
frameworks/cj/: BUILD.gn
frameworks/cj/ffi/: BUILD.gn  cj_ability_delegator.cpp  cj_ability_delegator.h  cj_ability_delegator_args.cpp  cj_ability_delegator_args.h  cj_ability_lifecycle_callback.cpp  cj_ability_lifecycle_callback.h  cj_ability_monitor.cpp  cj_ability_monitor.h  cj_ability_monitor_object.cpp  cj_ability_monitor_object.h  cj_ability_runtime_error.h  cj_ability_stage_monitor.h  cj_application_context.cpp  cj_application_context.h  cj_application_context_ffi.cpp  cj_application_context_ffi.h  cj_application_state_change_callback.cpp  cj_application_state_change_callback.h  cj_element_name_ffi.cpp  cj_element_name_ffi.h  cj_environment_callback.cpp  cj_macro.h  cj_remote_object_ffi.h  cj_utils_ffi.cpp  cj_utils_ffi.h  cj_want_agent_ffi.cpp  cj_want_agent_ffi.h  cj_want_agent_utils.h  cj_want_ffi.cpp  cj_want_ffi.h
frameworks/cj/mock/: BUILD.gn  cj_ability_ffi.cpp  cj_delegator_ffi.cpp  cj_errormanager_mock_ffi.cpp
frameworks/simulator/: BUILD.gn
frameworks/simulator/ability_simulator/: BUILD.gn
frameworks/simulator/common/: BUILD.gn
frameworks/simulator/osal/: BUILD.gn
frameworks/simulator/test/: BUILD.gn
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/ability_manager/: BUILD.gn  ability_manager_headers.gni
interfaces/inner_api/ani_base_context/: BUILD.gn
interfaces/inner_api/app_manager/: BUILD.gn
interfaces/inner_api/auto_fill_manager/: BUILD.gn
interfaces/inner_api/child_process_manager/: BUILD.gn
interfaces/inner_api/connect_server_manager/: BUILD.gn
interfaces/inner_api/connectionobs_manager/: BUILD.gn
interfaces/inner_api/dataobs_manager/: BUILD.gn  dataobs_manager_headers.gni
interfaces/inner_api/deps_wrapper/: BUILD.gn
interfaces/inner_api/error_utils/: BUILD.gn
interfaces/inner_api/extension_manager/: BUILD.gn
interfaces/inner_api/foreground_app_obs_manager/: BUILD.gn
interfaces/inner_api/mission_manager/: BUILD.gn
interfaces/inner_api/napi_base_context/: BUILD.gn
interfaces/inner_api/native_extension/: context_impl.h  extension_ability_impl.h  extension_context_impl.h
interfaces/inner_api/page_config_manager/: BUILD.gn
interfaces/inner_api/quick_fix/: BUILD.gn  IQuickFixManager.idl
interfaces/inner_api/runtime/: BUILD.gn
interfaces/inner_api/session_handler/: BUILD.gn
interfaces/inner_api/uri_permission/: BUILD.gn  IUriPermissionManager.idl  IUriPermissionManagerWithSandBoxMgr.idl
interfaces/inner_api/wantagent/: BUILD.gn
services/abilitymgr/: BUILD.gn  CLAUDE.md  abilitymgr.gni  libabilityms.map
services/abilitymgr/etc/: BUILD.gn  appfwk.para  appfwk.para.dac
services/abilitymgr/include/: ability_app_state_observer.h  ability_auto_startup_data_manager.h  ability_auto_startup_service.h  ability_background_connection.h  ability_bundle_event_callback.h  ability_cache_manager.h  ability_config.h  ability_connect_callback_proxy.h  ability_connect_manager.h  ability_debug_deal.h  ability_event_handler.h  ability_event_util.h  ability_failure_code.h  ability_first_frame_state_observer_manager.h  ability_interceptor.h  ability_interceptor_executer.h  ability_manager_collaborator_proxy.h  ability_manager_constants.h  ability_manager_event_subscriber.h  ability_manager_proxy.h  ability_manager_radar.h  ability_manager_service.h  ability_manager_stub.h  ability_manager_xcollie.h  ability_record.h  ability_record_death_manager.h  ability_scheduler_proxy.h  ability_scheduler_stub.h  ability_service_util.h  ability_token_interface.h  ability_token_proxy.h  ability_token_stub.h  ability_util.h  ag_convert_callback_impl.h  ams_configuration_parameter.h  app_exception_handler.h  app_exit_reason_data_manager.h  app_exit_reason_helper.h  app_gallery_enable_util.h  app_no_response_disposer.h  (+81 more)
services/abilitymgr/resource/: ams_extension_config.json  ams_service_config.json  default_recovery_config.json  proxy_authorization_uri.json  start_ability_without_caller_token.json  uiextension_picker_config.json
services/appmgr/: BUILD.gn  libappms.map
services/common/: BUILD.gn
services/dataobsmgr/: BUILD.gn  dataobsms.gni
services/quickfixmgr/: BUILD.gn  quick_fix.cfg
services/uripermmgr/: BUILD.gn  CLAUDE.md
test/fuzztest/: BUILD.gn  ability_fuzz_util.h
test/unittest/: BUILD.gn  BUILD.gn.rej
tools/aa/: BUILD.gn
tools/cc/: BUILD.gn  ohos-claw-cc.json
tools/fm/: BUILD.gn
tools/ohos-aa/: BUILD.gn  README.md  ohos-aa.json
tools/ohos-arktsScript/: BUILD.gn  config.json
(+10122 files in other folders)
