# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

cj_config = {
  platform_name = ""
  common_defines = []
}

if (current_os == "ohos") {
  cj_config.platform_name = "ohos"
  cj_config.common_defines = [
    "__DSU__",
    "__OHOS__",
    "__LINUX__",
  ]
} else if (current_os == "linux") {
  cj_config.platform_name = "linux"
  cj_config.common_defines = [ "__LINUX__" ]
} else if (current_os == "mingw") {
  cj_config.platform_name = "windows"
  cj_config.common_defines = [ "__WINDOWS__" ]
}
