# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("ani_packages") {
  deps = [
    "${ability_runtime_path}/frameworks/ani/ability_delegator:ability_delegator_abc_etc",
    "${ability_runtime_path}/frameworks/ani/ability_delegator:ability_delegator_registry_ani_kit",
    "${ability_runtime_path}/frameworks/ani/configuration:configuration_abc",
    "${ability_runtime_path}/frameworks/ani/configuration:configuration_ani_kit",
    "${ability_runtime_path}/frameworks/ani/launch_param:launch_param_ani_kit",
    "${ability_runtime_path}/frameworks/ani/ui_extension_ability:ui_extension_ability_ani_kit",
    "${ability_runtime_path}/frameworks/ani/uiextensioncontext:ui_ext_con_ani_kit",
  ]
}
