# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("cj_ability_packages") {
  deps = [
    "${ability_runtime_path}/frameworks/cj/ffi:cj_ability_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/app/app_manager:cj_app_manager_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/app/errormanager:cj_errormanager_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/app/recovery:cj_app_recovery_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/ark_interop_helper:ark_interop_helper_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/context:cj_context_ffi",
    "${ability_runtime_path}/frameworks/cj/ffi/want_agent:cj_want_agent_ffi",
    "${ability_runtime_path}/frameworks/native/ability:cj_ability_context_native",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_abilitykit_native_ffi",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_action_extension",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_embedded_ui_extension",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_extensionkit_native",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_photo_editor_extension",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_share_extension",
    "${ability_runtime_path}/frameworks/native/ability/native:cj_ui_extension",
  ]
}
