# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("innerkits_target") {
  deps = [
    "ability_manager:ability_manager",
    "ability_manager:ability_manager_c",
    "app_manager:app_manager",
    "child_process_manager:child_process_manager",
    "connectionobs_manager:connection_obs_manager",
    "dataobs_manager:dataobs_manager",
    "deps_wrapper:ability_deps_wrapper",
    "error_utils:ability_runtime_error_util",
    "quick_fix:quickfix_manager",
    "uri_permission:uri_permission_mgr",
    "wantagent:wantagent_innerkits",
  ]
  if (ability_runtime_auto_fill) {
    deps += [ "auto_fill_manager:auto_fill_manager" ]
  }
}
